--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+<!doctype html>
+<html>
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
+	<title>DUCK DOT COM</title>
+	<style type="text/css">body {
+	background:  url(http://i.imgur.com/4khGUkm.gif) no-repeat center top fixed; 
+  background-size: cover;
+	text-align: left;
+	font: 20px courier, sans-serif;
+}
+p.ex1 {
+	color: #041399;
+	font: 23px courier, bold, serif;
+}
+a:link {
+	color: #66ccff;
+	background-color: transparent;
+	text-decoration: none;
+	font: 40px bold courier, sans-serif;
+}
+a:visited {
+	color: #66ccff;
+	background-color: transparent;
+	text-decoration: none;
+	font: 40px bold courier, sans-serif;
+}
+a:hover {
+	color: #c907ff;
+	background-color:;
+	text-decoration: none;
+	font: 40px bold courier, sans-serif;
+}
+a:active {
+	color: gold;
+	background-color: pink;
+	text-decoration: none;
+	font: 40px bold courier, sans-serif;
+}
+	</style>
+</head>
+<body>
+
+<p><a href="book1/one1.html">a day at the park</a><br />
+<a href="book1/one4.html">the birds</a><br />
+<a href="book2/cover.html">bread</a><br />
+<a href="book2/04.html">slam duck</a><br/>
+<a href="book3/00.html">things that go dump in the night</a><br/>
+<a href="book3/05.html">ssstephin</a><br/>
+
+<br>
+
+<br>
+
+<br>
+
+<p class="ex2"><a href="store.html" target="">---go to the store---</a></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+</body>
+</html>
