--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
 	<title>DUCK DOT COM</title>
 	<style type="text/css">body {
-	background:  url(http://i.imgur.com/4khGUkm.gif) no-repeat center top fixed; 
+	background:  url(http://i.imgur.com/4khGUkm.gif) no-repeat center top; 
   background-size: cover;
 	text-align: left;
 	font: 20px courier, sans-serif;
 }
-p.ex1 {
-	color: #041399;
-	font: 23px courier, bold, serif;
+h1 {
+	color: white;
+	font: 60px arial;
 }
 a:link {
 	color: #66ccff;
@@ -40,26 +40,11 @@ a:active {
 	</style>
 </head>
 <body>
-
-<p><a href="book1/one1.html">a day at the park</a><br />
-<a href="book1/one4.html">the birds</a><br />
-<a href="book2/cover.html">bread</a><br />
-<a href="book2/04.html">slam duck</a><br/>
-<a href="book3/00.html">things that go dump in the night</a><br/>
-<a href="book3/05.html">ssstephin</a><br/>
-
-<br>
-
-<br>
-
-<br>
-
-<p class="ex2"><a href="store.html" target="">---go to the store---</a></p>
-
-<p></p>
-
-<p></p>
-
-<p></p>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<h1> D U C K L I N S</h1>
+<p><a href=one1.html>read</a><br>
+<a href="store.html">buy</a><br>
+<a href="">about</a>
+</p>
 </body>
 </html>
