--- a/one1.html
+++ b/one1.html
@@ -28,6 +28,6 @@ a:active{
 <br><a href="one2.html"><img src="one-00.png" style="width:700px"></a>
 <br><a href="one2.html" style="font-size:50px;" >>></a>
 <br>
-<br><a href="../eps.html">index</a>
-<br><a href="../index.html">home</a>
+<br><a href="eps.html">index</a>
+<br><a href="index.html">home</a>
 </body>
