--- a/one2.html
+++ b/one2.html
@@ -28,6 +28,6 @@ a:active{
 <br><a href="one3.html" style="font-size:50px;" ><img src="one-01.png" style="width:700px"></a>
 <br><a href="one1.html" style="font-size:50px;" ><<</a> <a href="one3.html" style="font-size:50px;" >>></a>
 <br>
-<br><a href="../eps.html">index</a>
-<br><a href="../index.html">home</a>
+<br><a href="eps.html">index</a>
+<br><a href="index.html">home</a>
 </body>
