--- a/one4.html
+++ b/one4.html
@@ -28,6 +28,6 @@ a:active{
 <br><a href="one5.html" style="font-size:50px;" ><img src="one-03.png" style="width:700px"></a>
 <br><a href="one3.html" style="font-size:50px;" ><<</a> <a href="one5.html" style="font-size:50px;" >>></a>
 <br>
-<br><a href="../eps.html">index</a>
-<br><a href="../index.html">home</a>
+<br><a href="eps.html">index</a>
+<br><a href="index.html">home</a>
 </body>
