--- a/one6.html
+++ b/one6.html
@@ -28,6 +28,6 @@ a:active{
 <br><a href="one7.html" style="font-size:50px;" ><img src="one-05.png" style="width:700px"></a>
 <br><a href="one5.html" style="font-size:50px;" ><<</a> <a href="one7.html" style="font-size:50px;" >>></a>
 <br>
-<br><a href="../eps.html">index</a>
-<br><a href="../index.html">home</a>
+<br><a href="eps.html">index</a>
+<br><a href="index.html">home</a>
 </body>
