--- a/one7.html
+++ b/one7.html
@@ -27,6 +27,6 @@ a:active{
 <br><a href="one8.html" style="font-size:50px;" ><img src="one-06.png" style="width:700px"></a>
 <br><a href="one6.html" style="font-size:50px;" ><<</a> <a href="one8.html" style="font-size:50px;" >>></a>
 <br>
-<br><a href="../eps.html">index</a>
-<br><a href="../index.html">home</a>
+<br><a href="eps.html">index</a>
+<br><a href="index.html">home</a>
 </body>
