--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>DUCK DOT COM</title>
+	<title>DUCKLINS</title>
 	<style type="text/css">body {
 	background:  url(http://i.imgur.com/4khGUkm.gif) no-repeat center top; 
   background-size: cover;
