--- a/index.html
+++ b/index.html
@@ -2,49 +2,8 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>DUCKLINS</title>
-	<style type="text/css">body {
-	background:  url(http://i.imgur.com/4khGUkm.gif) no-repeat center top; 
-  background-size: cover;
-	text-align: left;
-	font: 20px courier, sans-serif;
-}
-h1 {
-	color: white;
-	font: 60px arial;
-}
-a:link {
-	color: #66ccff;
-	background-color: transparent;
-	text-decoration: none;
-	font: 40px bold courier, sans-serif;
-}
-a:visited {
-	color: #66ccff;
-	background-color: transparent;
-	text-decoration: none;
-	font: 40px bold courier, sans-serif;
-}
-a:hover {
-	color: #c907ff;
-	background-color:;
-	text-decoration: none;
-	font: 40px bold courier, sans-serif;
-}
-a:active {
-	color: gold;
-	background-color: pink;
-	text-decoration: none;
-	font: 40px bold courier, sans-serif;
-}
+	<title>sean's cool web site</title>
 	</style>
 </head>
 <body>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h1> D U C K L I N S</h1>
-<p><a href=one1.html>read</a><br>
-<a href="store.html">buy</a><br>
-<a href="">about</a>
-</p>
 </body>
-</html>
