--- a/index.html
+++ b/index.html
@@ -3,7 +3,60 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
 	<title>sean's cool web site</title>
-	</style>
+<style>
+body {
+	text-align: center;
+    background-color: #ac8053;
+}
+table, td, th {
+    border: 1px solid tomato;
+} 
+.bordered {
+    width: 200px;
+    height: 20px;
+    padding: 10px;
+    border: 5px outset tomato;
+  }
+
+a:link {
+    color:; 
+    background-color: transparent; 
+    text-decoration: none;
+}
+
+a:visited {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+}
+
+a:active {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+}
+a {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 100px
+}
+</style>
 </head>
 <body>
+
+<center>
+<br>
+<p>
+<img src="flames1.gif" style="width:50px;"style="float:right;width:42px;height:42px;">
+<img src="title.png">
+ <img src="flames1.gif" style="width:50px;"style="float:left;width:42px;height:42px;">
+</p>
+<p style="color:DodgerBlue;"><a href="">visual art </a><img src="catmilk.gif" width="100">
+
+</center>
 </body>
