--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ table, td, th {
   }
 
 a:link {
-    color:; 
+    color: pink; 
     background-color: transparent; 
     text-decoration: none;
 }
@@ -31,15 +31,15 @@ a:visited {
 }
 
 a:hover {
-    color: red;
-    background-color: transparent;
-    text-decoration: underline;
+    color: cyan;
+    background-color: yellow;
+    text-decoration: none;
 }
 
 a:active {
     color: yellow;
     background-color: transparent;
-    text-decoration: underline;
+    text-decoration: none;
 }
 a {
 	font-family: Arial, Helvetica, sans-serif;
@@ -56,7 +56,8 @@ a {
 <img src="title.png">
  <img src="flames1.gif" style="width:50px;"style="float:left;width:42px;height:42px;">
 </p>
-<p style="color:DodgerBlue;"><a href="">visual art </a><img src="catmilk.gif" width="100">
+<p style="color:cyan;"><a href="">visual art </a><img src="catmilk.gif" width="100"></p>
+<p style="color:green;"><img src="garright.gif"><a href="music.html"> music</a></p>
 
 </center>
 </body>
