--- a/music.html
+++ b/music.html
@@ -5,8 +5,15 @@
 	<title>sean's cool web site</title>
 <style>
 body {
+	color: #6B6B6B;
 	text-align: center;
     background-color: #c89692;
+}
+h2 {
+    color: #6B6B6B;
+}
+h3 {
+    color: #C4C4C4;
 }
 div.music {
     overflow: auto;
@@ -16,7 +23,7 @@ div.music {
 
 </style>
 <body>
-<h1 style="font-size:60px;">Music</h1>
+<h1><img src="music1.png"></h1>
 <div class="music"><h2 style = "font-family: american typewriter;">guests <sub>(2017-present)</sub>
 <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=3290601048/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless ><a href="http://guests1.bandcamp.com/album/sunday-practice">Sunday Practice by guests</a></iframe> secret tree house <sub>(2012-2015)</sub><iframe style="border: 0; width: 370px; height: 370px;" src="https://bandcamp.com/EmbeddedPlayer/album=552477611/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/transparent=true/" seamless><a href="http://secrettreehouse.bandcamp.com/album/wrong-turns-in-the-left-direction">WRONG TURNS IN THE LEFT DIRECTION by secret tree house</a></iframe></h2></div>
 <h3>In The Credits</h3>
