--- a/index.html
+++ b/index.html
@@ -45,19 +45,30 @@ a {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100px
 }
+table, th, td {
+    border: 1px solid black;
+}
+
 </style>
 </head>
 <body>
-
 <center>
-<br>
 <p>
 <img src="flames1.gif" style="width:50px;"style="float:right;width:42px;height:42px;">
-<img src="title.png">
+<marquee style="width:200px">Welcome!</marquee>
  <img src="flames1.gif" style="width:50px;"style="float:left;width:42px;height:42px;">
 </p>
-<p style="color:cyan;"><a href="">visual art </a><img src="catmilk.gif" width="100"></p>
-<p style="color:green;"><img src="garright.gif"><a href="music.html"> music</a></p>
+<br><img src="mac.png" width="200">
+<p>hiya <br> 
+welcome. come on in. 
+<br>this is my personal site, kind of my digital room, 
+<br>where i keep all my stuff and you can learn what's been 
+<br>happening with me lately. scroll down and you will see some 
+<br>links that will show you some stuff.
+<br>~sean canfield, july 2018</p>
+<p><img src="spider1.gif" width="100"><a href="news.html">what's news?</a></p>
+<p><a href="portfolio.html">visual art </a><img src="catmilk.gif" width="100"></p>
+<p><img src="garright.gif"><a href="music.html"> music</a></p>
 
 </center>
 </body>
