--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ welcome. come on in.
 <p><img src="spider1.gif" width="100"><a href="news.html">what's news?</a></p>
 <p><a href="portfolio.html">visual art </a><img src="catmilk.gif" width="100"></p>
 <p><img src="garright.gif"><a href="music.html"> music</a></p>
-
+<p> <form style="border:2px solid #cc0 width:50%; padding:3px;text-align:center;" action="https://tinyletter.com/seancanfield" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/seancanfield', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">wanna sign up for an email newsletter?</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank"></a></p></form>
+         </P>
 </center>
 </body>
