--- a/news.html
+++ b/news.html
@@ -24,17 +24,14 @@ article {
 <center>
 <img src="bluelake.jpg" width=100%></center>
 <article>
-o hey. this is my first update! hi World! 
+<br>Hi there! This is my very first update.
+<p>This area will be a place for news about my creative projects as well as just kinda general updates about my life. I do use social media, but i feel worse & worse about it every day. I'd like to see a future where everyone just has their own website.
+<br>This site is 100% free for me. Hence the dot tk domain. If you're interested in how I did that, send me an <a href="contactme.html">email</a> & I'll let you in on the secret.
 <br>
-<br>do you ever forget everything you know along with your own identity? maybe you're along walking somewhere, or talking to your boss on the phone, or eating a slim jim, & suddenly you go completely blank? just for a moment?
-<br>
-<br>above is a photo of me at Blue Lake in Alabama in 2013 with Jack (he's the dog). this was a stop on a long road trip i took with my good friend Adel. we had no real plans, only nebulous points of interest in mind, 2 weeks off work, a couple hundred dollars saved up between us, & her mom's Toyota Camry. 
-<br>i've been working on an album for my band, Guests, and a song about... or rather i guess for... this place is on there. actually most of the songs on the album were written with a specific place in mind. it's kind of a concept album, but kinda loosey goosey too. 
-<br>so often i listen to another artist's/band's album & i'm struck by how it is essentially a map of the emotional landscape they found themselves in at that point in time, and at the same time, a story of their passage through it. as if it could be taken in like a fantasy novel of some character's (or cast of characters') journey through strange lands, but the chapters are shuffled & the story is chopped up. and i'm left to fill in the blanks between the songs.
-<br>i wanted to write a collection of songs that took the emotional maps of my own recent experience & brought them down & overlayed them onto the actual physical maps of the world. many of the places were along my route west as i was moving my life to the other corner of the country. weirdly, i don't think it's a road album, or an album about 'america', although those things certainly are in the distant background somewhere. Despite their pitfalls, albums of that sort are something i genuinely enjoy most of the time. Bill Callahan's "Apocalypse" played nearly endlessly on that trip. i probably sang along to "America" at least once a day. 
-<br>maps & my position within them were constantly on my mind, because i planned my meandering two week trip based nearly soley on free/semi-legal/no-way-this-is-legal campsites i found online, typing the raw coordinates into my map app & cross checking with my honking unwieldy road atlas. once, in the middle of the night i was lost & desperate and my friend (Adel again :) ) sent me the coordinates to an abandoned farm she knew about. in a lot of ways it was stressful & depressing to be travelling alone like that. i also felt exuberantly free at times. when i entered a house i felt strange & closterphobic. like i was too big. the world was my house.
-<br> ~sean 
-<br>july 19, 2018</article>
+<br>Anyways... my cat just had kittens... aaand it's hot in Seattle right now... aaand that is all for now!</p>
+<p>bye bye!</p>
+~sean 
+<br>july 27, 2018</article>
 
 
 </body>
