--- a/index.html
+++ b/index.html
@@ -2,64 +2,34 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>swoop</title>
+	<title>sean's cool web site</title>
 <style>
+p.double {border-style: double;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	margin-right: 600px;
+    margin-left: 600px;}
 body {
-    	color:#d8d8d8;
-	text-align: ;
+	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 70px;
-	background: url(https://i.imgur.com/ctb3lzd.jpg) ;
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	
-}
-div {
-    border:;
-    background-color:;
-    padding-top: 0px ;
-    padding-right: 0px;
-    padding-bottom: 0px;
-    padding-left: 0px;
-}
-
-a:link {
-    color:#d8d8d8 ; 
-    background-color: transparent; 
-    text-decoration: none;
-}
-
-a:visited {
-    color:#d8d8d8 ;
-    background-color: transparent;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #ffffff;
-    background-color: ;
-    text-decoration: none;
-}
-
-a:active {
-    color: ;
-    background-color: transparent;
-    text-decoration: none;
-}
-a {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 50px
-}
+    background-color: #77d0d0;
+	}
 </style>
-</head>
-<body>
-<center><div>welcome
-<p><a href="portfolio.html">lookit</a>
-</br><a href="https://guests1.bandcamp.com/">listen</a>
-</br><a href="contact.html">sup?</a>
-</br><a href="shop.html">get</a>
-</p>
-</div></center>
-</body>
-</html>
+	<body>
+	hello welcome
+	<p class="double">
+	<br>
+	<br><a href="portfolio.html">art</a>
+	<br>
+	<br><a href="https://guests1.bandcamp.com/">music</a>
+	<br>
+	<br><a href="contact.html">contact</a>
+	<br>
+	<br>
+	<br><img src="Constructionmouse.gif">
+	<br>still workin on it...</p>
+	<br> in the meantime, here is me with some art (by me) :0)
+	<br><img src="pic1.jpg" width="300px">
+	</body>
+	</html>
+	
