--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 	<br><a href="contact.html">contact</a>
 	<br>
 	<br>
-	<br><img src="Constructionmouse.gif">
+	<br><img src="Constructionmouse.GIF">
 	<br>still workin on it...</p>
 	<br> in the meantime, here is me with some art (by me) :0)
 	<br><img src="pic1.jpg" width="300px">
