--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@ body {
 </style>
 <body>
 <h>PORTFOLI&#9737; | Sean Canfield
-<br> <a href="index.html">↜home</a> ☄  <a href="shop.html">shop</a> ☄ <a href="contact.html">contact</a>
+<br> <a href="index.html">↜home</a> ☄  <a href="https://www.instagram.com/birdflyingbelowtheground/">gram</a> ☄ <a href="contact.html">contact</a>
 </h>
 <center>
 
