--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ body {
 	<br>
 	<br><img src="Constructionmouse.GIF">
 	<br>still workin on it...</p>
-	<br> :o)
+	<br> hi! this is my personal webpage. welcome!
+<br>my name is sean canfield. i am an artist & intermittent musician.
+		<br> on this site you will find my work. thanks! 
 	<br><img src="pic1.jpg" width="300px">
 	</body>
 	</html>
