--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ body {
 	<br><a href="contact.html">contact</a>
 	<br>
 	<br>
-	<br><img src="Constructionmouse.GIF">
-	<br>still workin on it...</p>
+</p>
 	<br> hi! this is my personal webpage. welcome!
 <br>my name is sean canfield. i am an artist & intermittent musician.
-		<br> on this site you will find my work. thanks! 
+		<br>on this site you will find my work.
+		<br>thanks for stopping by :0)
 	<br><img src="pic1.jpg" width="300px">
 	</body>
 	</html>
