--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ body {
 	<br>
 	<br><a href="portfolio.html">art</a>
 	<br>
+	<br><a href="cv.html">cv</a>
+	<br>
 	<br><a href="https://guests1.bandcamp.com/">music</a>
 	<br>
 	<br><a href="contact.html">contact</a>
