--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
 	</style>
 </head>
 <body>
-<div class=header><h1>Sean Canfield</h1>
+<div class=header><h1>Sean R. Canfield</h1>
 <br>Seattle, WA
 <br>seanrcanfield@gmail.com</div>
 <br>
