--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>Sean Canfield | CV</title>
+	<title>Sean R. Canfield | CV</title>
 	<style>
 	body {
     font-family: Arial;
