--- a/cv.html
+++ b/cv.html
@@ -48,15 +48,15 @@
 
 <br><h1>Exhibitions</h1>
 <br>
-<br>Oct 2018 ~ Henry Gallery Staff Art Show, City Grind Espresso, Seattle
+<br>Henry Gallery Staff Art Show, City Grind Espresso, Seattle ~ Oct 2018
 <br>
-<br>Sep 2017 ~ 'Sub-basement Room' opening, House of Fat Cat, Seattle
+<br>'Sub-basement Room' opening, House of Fat Cat, Seattle ~ Sep 2017
 <br>
-<br>Dec 2017 ~ Featured artist, Monkey Grind, Seattle
+<br>Featured artist, Monkey Grind, Seattle ~ Dec 2017
 <br>
-<br>Jan 2016 ~ Featured artist, Goodness Gracious, West Seattle
+<br>Featured artist, Goodness Gracious, West Seattle ~ Jan 2016
 <br>
-<br>Jan 2014 ~ Young Local Artists, Stone Fire Gallery, Titusville, FL
+<br>Young Local Artists, Stone Fire Gallery, Titusville, FL ~ Jan 2014
 </div>
 </body>
 </html>
