--- a/cv.html
+++ b/cv.html
@@ -56,6 +56,8 @@
 <br>
 <br>Featured artist, Goodness Gracious, West Seattle ~ Jan 2016
 <br>
+<br>Featured artist, Austin Coffee, Orlando, FL ~ July 2014	
+<br>	
 <br>Young Local Artists, Stone Fire Gallery, Titusville, FL ~ Jan 2014
 </div>
 </body>
