--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@ body {
 	<br>
 	<br>
 </p>
-	<br> hi! this is my personal webpage. welcome!
-<br>my name is sean canfield. i am an artist & intermittent musician.
-		<br>on this site you will find my work.
+	<br> hi! this is the webpage of Sean Canfield
+<br>an artist & intermittent musician. Welcome!
 		<br>thanks for stopping by :0)
-	<br><img src="pic1.jpg" width="300px">
+		<br>here is pic of the artist
+	<br><img src="chippic.jpg" width="300px">
 	</body>
 	</html>
-	
