--- a/index.html
+++ b/index.html
@@ -12,27 +12,22 @@ p.double {border-style: double;
 body {
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
-    background-color: #77d0d0;
+    background-color: ;
 	}
 </style>
 	<body>
-	hello welcome
+	<img src="bubblelettername.png" width="500px"><img src="chippic3.png" width="200px">
 	<p class="double">
 	<br>
 	<br><a href="portfolio.html">art</a>
 	<br>
-	<br><a href="cv.html">cv</a>
-	<br>
 	<br><a href="https://guests1.bandcamp.com/">music</a>
+	<br>
+	<br><a href="cv.html">cv</a>
 	<br>
 	<br><a href="contact.html">contact</a>
 	<br>
 	<br>
 </p>
-	<br> hi! this is the webpage of Sean Canfield
-<br>an artist & intermittent musician. Welcome!
-		<br>thanks for stopping by :0)
-		<br>here is pic of the artist
-	<br><img src="chippic.jpg" width="300px">
 	</body>
 	</html>
