--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>Sean R. Canfield | CV</title>
+	<title>Sean Canfield | CV</title>
 	<style>
 	body {
     font-family: Arial;
@@ -20,17 +20,17 @@
 	}
 	.header {
     background-color:;
-    text-align: right;
+    text-align: left;
     padding: 20px;
 	}
 	.row {
-	text-align: right;
+	text-align: left;
 	padding: 20px;
 	}
 	</style>
 </head>
 <body>
-<div class=header><h1>Sean R. Canfield</h1>
+<div class=header><h1>Sean Hazel Canfield</h1>
 <br>Seattle, WA
 <br>seanrcanfield@gmail.com</div>
 <br>
@@ -40,25 +40,124 @@
 <br>Chuck Carbia
 <br>2010 - 2011
 <br>
-<br>Kelly Boemher
-<br>2011
-<br>
 <br>Janae Corrado
 <br>2011 - 2012
+<br>
+<br><h1>Selected Experience</h1>
+<br>
+<br><strong>Art Curator,</strong> Ballard Bauhaus Coffee
+<br>August 2019 - Present
+<br>
+<br><strong>Musical Director, band leader,</strong> Guests
+<br>2017 - Present
+<br>
+<br><strong>Bass, touring musician,</strong> Flying Fish Cove
+<br>2017 - 2019
+<br>
+<br><strong>Bass,</strong> Amity Whorl
+<br>2017 - 2018
 
-<br><h1>Exhibitions</h1>
+<br><h1>Selected Exhibitions & Performances</h1>
+<br~ ~ ~ ~
+br>
+<br>2019 ~ In-store concert, Flying Fish Cove, Speck's Records, Portland, OR
 <br>
-<br>Henry Gallery Staff Art Show, City Grind Espresso, Seattle ~ Oct 2018
+<br>~ ~ ~ ~Venue concert, Flying Fish Cove performance in support of Harry And The Potters, Bottom of the Hill, San Francisco, CA
 <br>
-<br>'Sub-basement Room' opening, House of Fat Cat, Seattle ~ Sep 2017
+<br>~ ~ ~ ~Community-run venue concert, Guests performance, Corpus Arts, Albuquerque, NM
 <br>
-<br>Featured artist, Monkey Grind, Seattle ~ Dec 2017
+<br>~ ~ ~ ~Venue concert, Flying Fish Cove performance, Georgia Theatre Rooftop, Athens, GA
 <br>
-<br>Featured artist, Goodness Gracious, West Seattle ~ Jan 2016
+<br>~ ~ ~ ~Venue concert, Flying Fish Cove performance, Mercury Lounge, Manhattan, NY
 <br>
-<br>Featured artist, Austin Coffee, Orlando, FL ~ July 2014	
-<br>	
-<br>Young Local Artists, Stone Fire Gallery, Titusville, FL ~ Jan 2014
+<br>~ ~ ~ ~Community-run venue concert, Flying Fish Cove performance, Zootown Arts Community Center, Missoula, MT
+<br>
+<br>2018 ~ Henry Gallery Staff Art Show, curated by Fiona Clark and Markie Mickelson, City Grind Espresso, Seattle, WA
+<br>
+<br>~ ~ ~ ~X-mas Toy Drive, Flying Fish Cove performance, The Vera Project, Seattle, WA
+<br>
+<br>~ ~ ~ ~Camp Daze music fest, Flying Fish Cove performance, Missoula, MT
+<br>
+<br>~ ~ ~ ~The Oakland Pop-fest, Flying Fish Cove performance, The Dildo Factory, Berkeley, CA
+<br>
+<br>~ ~ ~ ~In-store concert, Flying Fish Cove performance, Tower District Records, Fresno, CA
+<br>
+<br>~ ~ ~ ~Community-run venue concert, Flying Fish Cove performance in support of The Crabs, Woodland Theatre, Seattle, WA
+<br>
+<br>~ ~ ~ ~Cascadia Camp Out, Guests performance, private residence, Brooklyn, WA
+<br>
+<br>~ ~ ~ ~Community-run venue concert, Guests performance, Woodland Theatre, Seattle, WA
+<br>
+<br>~ ~ ~ ~Community-run venue concert, Flying Fish Cove performance in support of Briana Marela, Armory Skatepark, Astoria, OR
+<br>
+<br>~ ~ ~ ~Ballard Art Walk Afterparty, Amity Whorl performance, Substation, Seattle, WA
+<br>
+<br>2017 ~ Community-run venue concert, Flying Fish Cove performance in support of Lisa Prank and Radiator Hospital, The Vera Project, Seattle, WA
+<br>
+<br>~ ~ ~ ~'Sub-basement Room' opening, House of Fat Cat, Seattle, WA
+<br>
+<br>~ ~ ~ ~Venue concert, Flying Fish Cove performance in support of Frankie Cosmos, The Crocodile, Seattle, WA
+<br>
+<br>~ ~ ~ ~Camp Daze music fest, Flying Fish Cove performance, Missoula, MT
+<br>
+<br>2016 ~ Featured artist, curated by Catherine Cougan, Monkey Grind, Seattle, WA
+<br>
+<br>2015 ~ Featured artist, curated by Catherine Cougan, Goodness Gracious, West Seattle, WA
+<br>
+<br>2014 ~ Featured artist, curated by Sean Moore, Austin Coffee & Film, Orlando, FL
+<br>
+<br>2013 ~ Young Local Artists, curated by Maxine Trainer, Stone Fire Gallery, Titusville, FL
+<br>
+<br><h1>Discography</h1>
+<br>
+<br><i>En Garde EP</i> by Flying Fish Cove 
+<br>
+<br>~ bass
+<br>
+<br>~ released on tape by Lost Sound Tapes (LST-105), & CD by Jigsaw Records (PZL161), June 21, 2019 
+<br>
+<br>
+<br><i>Legacy Out Back</i> by Guests 
+<br>
+<br>~ various instruments, writing, producer, recording engineer, production
+<br>
+<br>~ released by Records Records, May 5, 2019 (RR006)
+<br>
+<br>
+<br><i>At Moonset</i> by Flying Fish Cove 
+<br>
+<br>~ bass, writing on "Cammy the Camry"
+<br>
+<br>~ LP released by Help Yourself Records, tape by Lost Sound Tapes (LST-104), & CD by Jigsaw Records (PZL158), April 4, 2019
+<br>
+<br>
+<br><i>Sunday Practice</i> by Guests 
+<br>
+<br>~ guitar, vocals, writing, producer, recording engineer, production
+<br>
+<br>~ released by Records Records, December 10, 2017 (RR003)
+<br>
+<br>
+<br><i>Western Way EP</i> by Secret Tree House
+<br>
+<br>~ various instruments, writing, producer, recording engineer, production
+<br>
+<br>~ self-release (out of print), May 1, 2015
+<br>
+<br>
+<br><i>Wrong Turns in the Left Direction</i> by Secret Tree House
+<br>
+<br>~ various instruments, writing, producer, recording engineer, production
+<br>
+<br>~ self-release (out of print), August 19, 2014
+<br>
+<br>
+<br><i>Woods of Despair split cd</i> by Secret Tree House
+<br>
+<br>~ various instruments, writing
+<br>
+<br>~ self-release (out of print), January 22, 2013
+<br>
 </div>
 </body>
 </html>
