--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>sean's cool web site</title>
+	<title>sean canfield's dot net</title>
 <style>
 p.double {border-style: double;
 	margin-top: 50px;
