--- a/contact.html
+++ b/contact.html
@@ -7,39 +7,11 @@
 body {
     	
 	
-	background: url(https://i.imgur.com/JyxBd8a.jpg) ;
+	background:;
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	
-}
-h {
-color:#d8d8d8;
-font-family: Arial, Helvetica, sans-serif;
-	font-size: 70px;
-}
-a:link {
-    color:#d8d8d8 ; 
-    background-color: transparent; 
-    text-decoration: none;
-}
-
-a:visited {
-    color:#d8d8d8 ;
-    background-color: transparent;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #ffffff;
-    background-color: ;
-    text-decoration: none;
-}
-
-a:active {
-    color: ;
-    background-color: transparent;
-    text-decoration: none;
 }
 a {
 	font-family: Arial, Helvetica, sans-serif;
@@ -47,33 +19,39 @@ a {
 }
 p {
 	text-align:center ;
-	color:white;
+	color:blue;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
 }
 p2 {
 text-align:center ;
-	color:#d8d8d8;
+	color:pink;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
 </style>
 </head>
 <body>
-<h>get in touch&#9758;</h>
+
 </br>
 </br>
 </br>
 </br>
 </br>
 </br>
-<p><img src="dancingguy.gif">
-</br>e-mail me
+<p><h>get in touch&#9758;</h>
+<br>
+<br>email me:
 </br>
-</br>seanrcanfield@gmail.com
+</br>birdflyingbelowtheground@gmail.com
 </p>
 <center><p2>about commissions, with questions, with funny pics, or just to say hi</p2>
-<p><img src="email.gif"></p>
+<p><img src="email.gif">
+<Br>
+
+<br>
+<br> <form style="" action="https://tinyletter.com/sean-canfield" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/sean-canfield', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">recieve an occasional newsletter:</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank"></a></p></form>
+<br><p2>about upcoming shows, releases, exciting things, etc!   </p2>   </p>
 </center>
 </body>
 </html>
