--- a/index.html
+++ b/index.html
@@ -2,32 +2,37 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>sean canfield's dot net</title>
+	<title>swoop</title>
 <style>
-p.double {border-style: double;
-	margin-top: 50px;
-	margin-bottom: 50px;
-	margin-right: 600px;
-    margin-left: 600px;}
+
 body {
-	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
-    background-color: ;
+	font-size: 40px;
+	text-align: right;
+	font-family: tahoma;
+    background-color:white ;
+	 
 	}
+	h1 {
+  font-size: 10px;
+}
 </style>
-	<body>
-	<img src="bubblelettername.png" width="500px"><img src="chippic3.png" width="200px">
-	<p class="double">
+	<body><marquee behavior="scroll" direction="left">bird flying below the ground</marquee>
+	<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%">
+  <h1 class="w3-bar-item">art design etc etc
+  <br><a href="#" class="w3-bar-item w3-button">contact me</a>
+  <br><a href="#" class="w3-bar-item w3-button"></a>
+  <br><a href="#" class="w3-bar-item w3-button"></a></h1>
+</div>
+	<div style="margin-left:5%">
+	<br><img src="https://i.imgur.com/DfDIGlC.png" style="width:400px"><img src="https://i.imgur.com/Dy4hDz2.png" style="width:450px"><img src="https://i.imgur.com/nid6mkh.png" style="width:450px"><img src="https://i.imgur.com/mJzqA9S.jpg" style="width:400px">
+	<br><iframe style="border: 0; width: 350px; height: 400px;" src="https://bandcamp.com/EmbeddedPlayer/album=4266885844/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://guests1.bandcamp.com/album/legacy-out-back">Legacy Out Back by guests</a></iframe><img src="https://f4.bcbits.com/img/0017329715_10.jpg" style="width:400px">
+	<br><img src="https://i.imgur.com/qFDujCF.png" style="width:400px"><img src="https://i.imgur.com/y68M0zw.jpg" style="width:400px">
 	<br>
-	<br><a href="portfolio.html">art</a>
-	<br>
-	<br><a href="https://guests1.bandcamp.com/">music</a>
-	<br>
-	<br><a href="cv.html">cv</a>
-	<br>
-	<br><a href="contact.html">contact</a>
 	<br>
 	<br>
-</p>
+	<br>
+	<br>
+	<br>
+	<br></div>
 	</body>
 	</html>
