--- a/contactme.html
+++ b/contactme.html
@@ -1,27 +1,28 @@
-<!doctype html>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>get in touch</title>
+	<title>contact the artist</title>
 <style>
 body {
-	text-align: center;
-    background-color:;
+	font-size: 13px;
+	text-align: left;
+	font-family: tahoma;
+    background-color:white ;
+	 
+	}
+	img {
+  float: left;
 }
-
 </style>
-</head>
 <body>
-<h1>&#9758; let's get in touch &#9756;</h1>
-<p>for illustration work, questions about artwork, or just to chat:</p>
-<p style="font-size:25px">seanrcanfield@gmail.com</p>
-<p><img src="slimey.png" width=50px></p>
-<p>for booking & all Guests / band related stuff:</p>
-<p style="font-size:25px">gueststheeband@gmail.com</p>
-</br>
-<img src="email.gif">
-<p><a href="portfolio.html">↜back to portfolio</a>
-<p><a href="index.html">↜back to homepage</a>
-
+<img src="https://i.imgur.com/G4WfkPU.png" style="width:400px">hello. my name is sean canfield. 
+<br>i am an interdisciplinary artist currently living in the pacific northwest. 
+<br>my work includes, but is not limited to, painting, drawing, comics, music, print arts, graphic design, video, zine making, & illustration.
+<br>
+<br>if you would like to reach me 
+<br>my email is <a href="mailto: birdflyingbelowtheground@gmail.com">birdflyingbelowtheground@gmail.com</a>
+<br>
+<br>requests for illustration work or commissions are welcome.
+<br>requests to hang work are yearned for.
 </body>
 </html>
