--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 	<body><marquee behavior="scroll" direction="left">bird flying below the ground</marquee>
 	<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%">
   <h1 class="w3-bar-item">art design etc etc
-  <br><a href="#" class="w3-bar-item w3-button">contact me</a>
+  <br><a href="contactme.html" class="w3-bar-item w3-button">contact me</a>
   <br><a href="#" class="w3-bar-item w3-button"></a>
   <br><a href="#" class="w3-bar-item w3-button"></a></h1>
 </div>
@@ -32,7 +32,7 @@ body {
 	<br>
 	<br>
 	<br>
-	<br>
+	<br><h3>all things here made by sean canfield</h3>
 	<br></div>
 	</body>
 	</html>
