--- a/index.html
+++ b/index.html
@@ -7,36 +7,35 @@
 
 body {
 	font-size: 40px;
-	text-align: right;
+	text-align: center;
 	font-family: tahoma;
     background-color:white ;
 	 
 	}
 	h1 {
+	text-align: right;
   font-size: 10px;
 }
-
+h2 {
+text-align: right;
+  font-size: 10px;
+  font-family: courier;
+}
 </style>
-	<body><marquee behavior="scroll" direction="left">bird flying below the ground</marquee>
-	<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%">
-  <h1 class="w3-bar-item">art design etc etc
-  <br><a href="contactme.html" class="w3-bar-item w3-button">about me</a>
-  <br><a href="#" class="w3-bar-item w3-button"></a>
-  <br><a href="#" class="w3-bar-item w3-button"></a></h1>
+	<body><marquee behavior="scroll" direction="left"><img src="https://i.imgur.com/KK2ODKI.jpg" style="height:150px"></marquee>
+	<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%; float:left">
+  <h1 class="w3-bar-item"><a href="visualart.html">visual art</a>
+  <br>
+  <br><a href="design.html">design</a>
+  <br>
+  <br><a href="contactme.html" class="w3-bar-item w3-button">contact</a>
+  <br>
+   <br><h2>© sean canfield 2010-2020</h2>
 </div>
-	<div style="margin-left:5%">
-	<br><a target="_blank" href="https://i.imgur.com/DfDIGlC.png"><img src="https://i.imgur.com/DfDIGlC.png" style="width:400px" title="sad tod (2019)" alt="sad tod (2019)"></a><a target="_blank" href="https://i.imgur.com/Dy4hDz2.png"><img src="https://i.imgur.com/Dy4hDz2.png" style="width:450px" title="natural fucker (2019)" alt="natural fucker (2019)"></a><a target="_blank" href="https://i.imgur.com/nid6mkh.png"><img src="https://i.imgur.com/nid6mkh.png" style="width:450px" title="don't cry stupid (2019)" alt="don't cry stupid (2019)"></a><a target="_blank" href="https://i.imgur.com/mJzqA9S.jpg"><img src="https://i.imgur.com/mJzqA9S.jpg" style="width:400px" title="sub-basement room (2017)" alt="sub-basement room (2017)"></a>
-	<br><a target="_blank" href="https://i.imgur.com/u1X0Oom.png"> <img src="https://i.imgur.com/u1X0Oom.png" style="width:400px" title="turtley (2019)" alt="turtley (2019)"> </a> <a target="_blank" href="https://i.imgur.com/q5Xvl7I.jpg"><img src="https://i.imgur.com/q5Xvl7I.jpg" style="width:350px" title="boy adrift (2015)" alt="boy adrift (2015)"></a><iframe style="border: 0; width: 350px; height: 400px;" src="https://bandcamp.com/EmbeddedPlayer/album=4266885844/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://guests1.bandcamp.com/album/legacy-out-back">Legacy Out Back by guests</a></iframe><a target="_blank" href="https://f4.bcbits.com/img/0017329715_10.jpg"><img src="https://f4.bcbits.com/img/0017329715_10.jpg" style="width:400px" title="Legacy Out Back tape design (2019)" alt="Legacy Out Back tape design (2019)"></a>
-	<br><a target="_blank" href="https://i.imgur.com/HuwDy6T.jpg"> <img src="https://i.imgur.com/HuwDy6T.jpg" style="width:400px" title="manrico (2018)" alt="manrico (2018)"> </a><a target="_blank" href="https://i.imgur.com/0ekSDYo.jpg"> <img src="https://i.imgur.com/0ekSDYo.jpg" style="width:400px" title="semisecret (2019)" alt="semisecret (2019)"> </a><a target="_blank" href="https://i.imgur.com/qFDujCF.png"><img src="https://i.imgur.com/qFDujCF.png" style="width:400px" title="range life number 1 (2018)" alt="range life number 1 (2018)"></a><a target="_blank" href="https://i.imgur.com/y68M0zw.jpg"><img src="https://i.imgur.com/y68M0zw.jpg" style="width:400px" title="my name is John (2016)" alt="my name is John (2016)"></a>
-	<br><a target="_blank" href="https://i.imgur.com/qSHGBq7.jpg"> <img src="https://i.imgur.com/qSHGBq7.jpg" style="width:500px" title="mtns to the sea (2019)" alt="mtns to the sea (2019)"> </a><a target="_blank" href="https://i.imgur.com/lcy6yLq.jpg"> <img src="https://i.imgur.com/lcy6yLq.jpg" style="width:600px" title="drinkin a soda (2018)" alt="drinkin a soda (2018)"> </a><a target="_blank" href="https://i.imgur.com/naitjPX.jpg"> <img src="https://i.imgur.com/naitjPX.jpg" style="width:600px" title="frog cafe (2018)" alt="frog cafe (2018)"> </a>
-	<br><a target="_blank" href="https://i.imgur.com/jmi04CU.jpg"> <img src="https://i.imgur.com/jmi04CU.jpg" style="width:1000px" title="beach party (2018)" alt="beach party (2018)"> </a><a target="_blank" href="https://i.imgur.com/zI4c7DW.jpg"> <img src="https://i.imgur.com/zI4c7DW.jpg" style="width:400px" title="frog on the road (2018)" alt="frog on the road (2018)">
-	<br><a target="_blank" href="https://i.imgur.com/lmwvpbq.jpg"> <img src="https://i.imgur.com/lmwvpbq.jpg" style="width:500px" title="coffee licker (2018)" alt="coffee licker (2018)"> </a><a target="_blank" href="https://i.imgur.com/WSXQpCP.jpg"> <img src="https://i.imgur.com/WSXQpCP.jpg" style="width:500px" title="doodles (2018)" alt="doodles (2018)"> </a><a target="_blank" href="https://i.imgur.com/uEl5Hr6.jpg"> <img src="https://i.imgur.com/uEl5Hr6.jpg" style="width:500px" title="dog moon (2019)" alt="dog moon (2019)"> </a>
-	<br>
-	<br>
-	<br><h1>all things here made by sean canfield</h1>
+	<div style="margin-left:5%;">
+	<br><img src="https://i.imgur.com/DfDIGlC.png" style="float:center; width:500px" title="sad tod (2019)" alt="sad tod (2019)">
 	<br></div>
 	</body>
 	</html>
 	
-	/* <img src="" style="width:px" alt="">
-	<a target="_blank" href=""> <img src="" style="width:px" title="" alt=""> </a> *\
+	
