--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <style>
 
 body {
+background-color: #e4d8c3;
 	font-size: 40px;
 	text-align: center;
 	font-family: tahoma;
-    background-color:white ;
 	 
 	}
 	h1 {
@@ -22,7 +22,7 @@ text-align: right;
   font-family: courier;
 }
 </style>
-	<body><marquee behavior="scroll" direction="left"><img src="https://i.imgur.com/KK2ODKI.jpg" style="height:150px"></marquee>
+	<body><marquee behavior="scroll" direction="left"><img src="https://i.imgur.com/UrhFmKN.png" style="height:150px"></marquee>
 	<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%; float:left">
   <h1 class="w3-bar-item"><a href="visualart.html">visual art</a>
   <br>
