--- a/contactme.html
+++ b/contactme.html
@@ -13,16 +13,48 @@ body {
 	img {
   float: left;
 }
+h1 {
+  font-size: 10px;
+  text-align: right;
+}
+h2 {
+  font-size: 10px;
+  font-family: courier;
+  text-align: right;
+}
+h3 {
+font-size: 13px;
+	text-align: right;
+	font-family: tahoma;
+	}
+span.a {
+  display: inline;
+  width: 100px;
+  height: 100px;
+  padding: 15px;
+  }
 </style>
 <body>
-<img src="https://i.imgur.com/G4WfkPU.png" style="width:400px">hello. my name is sean canfield. 
-<br>i am an interdisciplinary artist currently living in the pacific northwest. 
-<br>my work includes, but is not limited to, painting, drawing, comics, music, print arts, graphic design, video, zine making, & illustration.
+<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%">
+  <h1 class="w3-bar-item"><a href="index.html">home</a>
+  <br>
+  <br><a href="visualart.html">visual art</a>
+  <br>
+  <br><a href="design.html">design</a>
+  <br>
+  <br><a href="contactme.html" class="w3-bar-item w3-button">contact</a>
+  <br>
+  <br><h2>© sean canfield 2010-2020</h2></div>
+<div style="margin-left:10%"><img src="bluelake.jpg" style="width:800px"><div><span class="a">  hello. my name is sean canfield. </span>
 <br>
-<br>if you would like to reach me 
-<br>my email is <a href="mailto: birdflyingbelowtheground@gmail.com">birdflyingbelowtheground@gmail.com</a>
 <br>
-<br>requests for illustration work or commissions are welcome.
-<br>requests to hang work are yearned for.
+<br><span class="a">i am an interdisciplinary artist living & working in the pacific northwest. </span>
+<br>
+<br>
+<br> <span class="a">if you would like to reach me </span>
+<br> <span class="a">my email is <a href="mailto: birdflyingbelowtheground@gmail.com">birdflyingbelowtheground@gmail.com</a></span>
+<br>
+<br> <span class="a">i accept illustration & design requests & personal commissions on a case by case basis.</span>
+<br> <span class="a">if you would like more information about a piece seen here or elsewhere, or if you'd like to inquire about exhibiting my work, please e-mail me.</div></span>
 </body>
 </html>
