--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
 
 body {
-background-color: #e4d8c3;
+background-color: ;
 	font-size: 40px;
 	text-align: center;
 	font-family: tahoma;
@@ -17,24 +17,36 @@ background-color: #e4d8c3;
   font-size: 10px;
 }
 h2 {
-text-align: right;
-  font-size: 10px;
+text-align: center;
+  font-size: 6px;
   font-family: courier;
 }
+h3 {
+text-align: center;
+  font-size: 12px;
+  font-family: tahoma;
+}
+a {
+  color: black;
+}
+span.a {
+  display: inline;
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+}
 </style>
-	<body><marquee behavior="scroll" direction="left"><img src="https://i.imgur.com/UrhFmKN.png" style="height:150px"></marquee>
-	<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%; float:left">
-  <h1 class="w3-bar-item"><a href="visualart.html">visual art</a>
-  <br>
-  <br><a href="design.html">design</a>
-  <br>
-  <br><a href="contactme.html" class="w3-bar-item w3-button">contact</a>
-  <br>
-   <br><h2>© sean canfield 2010-2020</h2>
-</div>
+	<body><marquee behavior="scroll" direction="left"><img src="bird.gif" style="height:150px"></marquee>
+
+
 	<div style="margin-left:5%;">
-	<br><img src="https://i.imgur.com/DfDIGlC.png" style="float:center; width:500px" title="sad tod (2019)" alt="sad tod (2019)">
+	<br><img src="sean-canfield.gif" style=" width:800px" title="" alt="">
 	<br></div>
+	<br>
+	<br>
+	
+	<h3><span class="a"><a href="design.html">design</a></span> &#9873; <span class="a"><a href="visualart.html">visual art</a></span> &#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">about</a></span>
+	<br><h2>©2010-2020</h2>
 	</body>
 	</html>
 	
