--- a/design.html
+++ b/design.html
@@ -23,16 +23,15 @@ h2 {
 </head>
 <body>
 <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%">
-  <h1 class="w3-bar-item"><a href="visualart.html">visual art</a>
+  <h1 class="w3-bar-item"><a href="index.html">home</a>
+  <br>
+  <br><a href="visualart.html">visual art</a>
   <br>
   <br><a href="design.html">design</a>
   <br>
   <br><a href="contactme.html" class="w3-bar-item w3-button">contact</a>
   <br>
-  <br><h2>© sean canfield 2010-2020</h2>
-  <br><a href="#" class="w3-bar-item w3-button"></a>
-  <br><a href="#" class="w3-bar-item w3-button"></a></h1>
-</div>
+  <br><h2>© sean canfield 2010-2020</h2></div>
 	
 	<div style="margin-left:5%">
 	<p style="color: green">album art</p>
