--- a/visualart.html
+++ b/visualart.html
@@ -22,7 +22,9 @@ h2 {
 }
 </style>
 	<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%">
-  <h1 class="w3-bar-item"><a href="visualart.html">visual art</a>
+  <h1 class="w3-bar-item"><a href="index.html">home</a>
+  <br>
+  <br><a href="visualart.html">visual art</a>
   <br>
   <br><a href="design.html">design</a>
   <br>
