--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ span.a {
 
 
 	<div style="margin-left:5%;">
-	<br><img src="sean-canfield.gif" style=" width:800px" title="" alt="">
+	<br><img src="swoopy.gif" style=" width:800px" title="" alt="">
 	<br></div>
 	<br>
 	<br>
