--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ span.a {
   padding: 5px;
 }
 </style>
-	<body><marquee behavior="scroll" direction="left"><img src="bird.gif" style="height:150px"></marquee>
-
+	<body>
 
 	<div style="margin-left:5%;">
 	<br><img src="swoopy.gif" style=" width:800px" title="" alt="">
@@ -45,7 +44,7 @@ span.a {
 	<br>
 	<br>
 	
-	<h3><span class="a"><a href="design.html">design</a></span> &#9873; <span class="a"><a href="visualart.html">visual art</a></span> &#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">about</a></span>
+	<h3><&#9873; <span class="a"><a href="visualart.html">my gallery</a></span> &#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">about</a></span>
 	<br><h2>©2010-2020</h2>
 	</body>
 	</html>
