--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 body {
 background-color: ;
 	font-size: 40px;
-	text-align: center;
+	text-align: left;
 	font-family: tahoma;
 	 
 	}
 	h1 {
-	text-align: right;
+	text-align: left;
   font-size: 10px;
 }
 h2 {
-text-align: center;
+text-align: left;
   font-size: 6px;
   font-family: courier;
 }
 h3 {
-text-align: center;
+text-align: left;
   font-size: 12px;
   font-family: tahoma;
 }
@@ -39,13 +39,14 @@ span.a {
 	<body>
 
 	<div style="margin-left:5%;">
-	<br><img src="swoopy.gif" style=" width:800px" title="" alt="">
+	<br><img src="swoopy.gif" style=" width:400px" title="" alt="swooop">
 	<br></div>
 	<br>
 	<br>
 	
-	<h3><&#9873; <span class="a"><a href="visualart.html">my gallery</a></span> &#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">about</a></span>
-	<br><h2>©2010-2020</h2>
+	<h3>&#9873; <span class="a"><a href="visualart.html">my gallery</a></span> 
+	<br>&#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">about</a></span>
+	<br>
 	</body>
 	</html>
 	
