--- a/contactme.html
+++ b/contactme.html
@@ -38,14 +38,9 @@ span.a {
 <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%">
   <h1 class="w3-bar-item"><a href="index.html">home</a>
   <br>
-  <br><a href="visualart.html">visual art</a>
+  <br><a href="visualart.html">my gallery</a>
   <br>
-  <br><a href="design.html">design</a>
-  <br>
-  <br><a href="contactme.html" class="w3-bar-item w3-button">contact</a>
-  <br>
-  <br><h2>© sean canfield 2010-2020</h2></div>
-<div style="margin-left:10%"><img src="bluelake.jpg" style="width:800px"><div><span class="a">  hello. my name is sean canfield. </span>
+<div style="margin-left:10%"><img src="bluelake.jpg" style="width:800px"><div><span class="a">  hi. my name is sean. this is my webpage. </span>
 <br>
 <br>
 <br><span class="a">i am an interdisciplinary artist living & working in the pacific northwest. </span>
@@ -53,8 +48,7 @@ span.a {
 <br>
 <br> <span class="a">if you would like to reach me </span>
 <br> <span class="a">my email is <a href="mailto: birdflyingbelowtheground@gmail.com">birdflyingbelowtheground@gmail.com</a></span>
-<br>
-<br> <span class="a">i accept illustration & design requests & personal commissions on a case by case basis.</span>
-<br> <span class="a">if you would like more information about a piece seen here or elsewhere, or if you'd like to inquire about exhibiting my work, please e-mail me.</div></span>
+<br><span class="a"> thanks for stoppin by!
+	
 </body>
 </html>
