--- a/contactme.html
+++ b/contactme.html
@@ -1,7 +1,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>contact the artist</title>
+	<title>whomst?</title>
 <style>
 body {
 	font-size: 13px;
