--- a/contactme.html
+++ b/contactme.html
@@ -39,7 +39,7 @@ span.a {
   <h1 class="w3-bar-item"><a href="index.html">home</a>
   <br>
   <br><a href="visualart.html">my gallery</a>
-  <br>
+	  <br></div>
 <div style="margin-left:10%"><img src="bluelake.jpg" style="width:800px"><div><span class="a">  hi. my name is sean. this is my webpage. </span>
 <br>
 <br>
