--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ span.a {
 	<br>
 	
 	<h3>&#9873; <span class="a"><a href="visualart.html">my gallery</a></span> 
-	<br>&#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">about</a></span>
+	<br>&#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">whomst</a></span>
 	<br>
 	</body>
 	</html>
