--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ span.a {
 	<h3>&#9873; <span class="a"><a href="visualart.html">my gallery</a></span> 
 	<br>&#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">whomst</a></span>
 	<br>
+	<br>projects
+	<br>&#9873; <span class="a"><a href="http://wortdistro.github.io/>wort distro</a></span>
+	<br>&#9873; <span class="a"><a href="https://world-records.bandcamp.com/>world recs</a></span>
 	</body>
 	</html>
 	
