--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ span.a {
 	<br>&#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">whomst</a></span>
 	<br>
 	<br>projects
-	<br>&#9873; <span class="a"><a href="http://wortdistro.github.io/>wort distro</a></span>
-	<br>&#9873; <span class="a"><a href="https://world-records.bandcamp.com/>world recs</a></span>
+	<br>&#9873; <span class="a"><a href="http://wortdistro.github.io/">wort distro</a></span>
+	<br>&#9873; <span class="a"><a href="https://world-records.bandcamp.com/">world recs</a></span>
 	</body>
 	</html>
 	
