--- a/contactme.html
+++ b/contactme.html
@@ -40,7 +40,7 @@ span.a {
   <br>
   <br><a href="visualart.html">my gallery</a>
 	  <br></div>
-<div style="margin-left:10%"><img src="" style="width:800px"><div><span class="a">  hi. my name is sean. this is my webpage. </span>
+<div style="margin-left:10%"><div><span class="a">  hi. my name is sean. this is my webpage. </span>
 <br>
 <br>
 <br><span class="a">i am an interdisciplinary artist living & working in the pacific northwest. </span>
