--- a/visualart.html
+++ b/visualart.html
@@ -33,7 +33,7 @@ h2 {
 	<div style="margin-left:5%">
 	
 		right now i'm making a short animation every weekday for fun and to learn the thing 
-		<br><img src="apr14-burn.gif" style="width:500px" title="4/14/21" alt="4/14/21">
+		<br><img src="apr15-cat-walk.gif" style="width:500px" title="4/15/21" alt="4/15/21"><img src="apr14-burn.gif" style="width:500px" title="4/14/21" alt="4/14/21">
 		<br><img src="apr13-melt.gif" style="width:500px" title="4/13/21" alt="4/13/21"><img src="apr12-this-guy.gif" style="width:500px" title="4/12/21" alt="4/12/21"><img src="apr9-drip.gif" style="width:500px" title="4/9/21" alt="4/9/21">
 		<br><img src="apr8-nite-drive.gif" style="width:500px" title="4/8/21" alt="4/8/21"><img src="apr7-sun-lay.gif" style="width:500px" title="4/7/21" alt="4/7/21"><img src="apr6-cute-walk.gif" style="width:500px" title="4/6/21" alt="4/6/21">
 		<br>here are some pics. some art i made. some other stuff too.
