--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ span.a {
 	<br>projects
 	<br>&#9873; <span class="a"><a href="http://wortdistro.net">wort distro</a></span>
 	<br>&#9873; <span class="a"><a href="https://world-records.bandcamp.com/">world recs</a></span>
+	<br>&#9873; <span class="a"><a href="https://soundcloud.com/g-u-e-s-t-s">guests - soundcloud</a></span>
+	<br>&#9873; <span class="a"><a href="https://guests1.bandcamp.com/">guests - bandcamp</a></span>
+
 	</body>
 	</html>
 	
