--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ span.a {
 	<br>&#9873; <span class="a"><a href="https://soundcloud.com/g-u-e-s-t-s">guests - soundcloud</a></span>
 	<br>&#9873; <span class="a"><a href="https://guests1.bandcamp.com/">guests - bandcamp</a></span>
 	<br>
-	<br>&#9873; <span class="a"><a href="https://special.fish/seany">special fish</a></span>
+	<br>&#9873; <span class="a"><a href="https://special.fish/jean">special fish</a></span>
 
 
 	</body>
